--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img style="width:100%" src="assets/Group 1.svg" />
+    <img style="width:100%" src="assets/all.svg" />
 </body>
 </html>
